--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,8 +1,9 @@
 .btn-flat {
-  color: white;
+  color: #1EDD88;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  border-color: #1EDD88;
+  background: white;
   transition: background 0.3s ease;
 }
 
@@ -12,4 +13,9 @@
   border-radius: 4px;
   background: #6a757e;
   transition: background 0.3s ease;
+}
+
+a {
+   text-decoration: none !important;
+    color: #1EDD88
 }
