--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,6 @@
 <div class="cover mb-4 d-flex align-items-center justify-content-center">
   <div class="text-center text-white">
-    <h1>Save any kind of movies</h1>
+    <h1>Save your favorite movies</h1>
     <h3 class="typed-js"></h3>
   </div>
 </div>
@@ -12,8 +12,13 @@
   <div class="row">
     <% @lists.each do |list| %>
       <div class="co-12 colsm-6 col-md-4">
+        <%= link_to list_path(list), class:'text-decoration-none' do %>
+          <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.photo.attached? ? cl_image_path(list.photo.key) : asset_path('listbackground.jpg') %>)">
             <%= list.name %>
+          </div>
+        <% end %>
       </div>
     <% end %>
   </div>
 </div>
+
